fixes fro contrast (home card buttons)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -206,7 +206,6 @@ input:focus-visible {
 .character-link-image {
     width: 40px;
     transition: transform 0.3s ease-in-out;  
-    
 }
 
 .copyright-block {
@@ -236,7 +235,10 @@ input:focus-visible {
     background-color: var(--highlight-light);
 }
 
-
+.card-action:hover {
+    background-color: var(--site-text);
+    color: var(--site-bg);
+}
 /* Media Queries */
 
 @media screen and (max-width:1200px) {
